compiler/testData/diagnostics/tests/inlineClasses/reifiedGenericUnderlyingType.kt
// !LANGUAGE: +InlineClasses, -JvmInlineValueClasses
// SKIP_TXT

inline class ICAny<<!REIFIED_TYPE_PARAMETER_NO_INLINE, REIFIED_TYPE_PARAMETER_NO_INLINE!>reified<!> T>(konst konstue: T)
